# backend

./: .clang-format  .clangd  .gitignore  AGENTS.md  CMakeLists.txt  compile_commands.json  main.cpp  report.md  xmake.lua
examples/: benchmark.py  echo_server.cpp  http_server.cpp
include/: connection.h  database.h  headers.h  log.h  mutex.h  noncopyable.h  orm.h  thread_safe_queue.h  threadpool.h
server/include/: async.hpp  log.hpp
server/include/async/: async_io.hpp  concepts.hpp  condition_variable.hpp  gen.hpp  io_context.hpp  lazy_io.hpp  mutex.hpp  promise_base.hpp  spin_mutex.hpp  stop_token.hpp  task.hpp
server/include/async/config/: io_context.hpp
server/include/async/details/: io_awaitable.hpp  io_context_meta.hpp  lazy_io_awaiter.hpp  lock_guard.hpp  resume_on_awaiter.hpp  spsc_cursor.hpp  task_info.hpp  thread_meta.hpp  trival_task.hpp  type_list.hpp  worker_meta.hpp
server/include/async/when/: when_all.hpp  when_any.hpp  when_some.hpp
server/include/net/: acceptor.hpp  http_server.hpp  inet_address.hpp  listen.hpp  socket.hpp
server/source/async/: async.cpp  lazy_io_awaiter.cpp
src/: connection.cpp  database.cpp  db.h  main.cpp  mutex.cpp  threadpool.cpp
tests/: test_example.cpp
tests/async/: test_batch_submit.cpp  test_chain_io.cpp  test_lazy_io.cpp  test_mutex.cpp  test_resume_on.cpp  test_socket_components.cpp  test_stop_token.cpp  test_timeout.cpp  test_when_any.cpp  test_when_some.cpp
